--- a/index.html
+++ b/index.html
@@ -10,35 +10,21 @@
   </head>
   <body>
     <div class="games">
-      <div class="game" style="background-color: rgba(0, 0, 255, 0.2)" data-id="game">
+      <div class="game" data-id="game">
         <!-- <span>Cold War</span> -->
         <img
-          class="game__full-image game__full-image--left"
+          class="game__image game__image--left"
           width="3840px"
           height="2160px"
           src="./assets/call-of-duty-black-ops-cold-war.jpg"
           alt=""
         />
-        <img
-        class="game__small-image game__small-image--left"
-        width="3840px"
-        height="2160px"
-        src="./assets/call-of-duty-black-ops-cold-war.jpg"
-        alt=""
-      />
       </div>
 
-      <div class="game is-active" style="background-color: rgba(255, 0, 0, 0.2)" data-id="game">
+      <div class="game is-active" data-id="game">
         <!-- <span>Warzone</span> -->
         <img
-          class="game__full-image game__full-image--center"
-          width="3840px"
-          height="2160px"
-          src="./assets/call-of-duty-warzone.jpg"
-          alt=""
-        />
-        <img
-          class="game__small-image game__small-image--center"
+          class="game__image game__image--center"
           width="3840px"
           height="2160px"
           src="./assets/call-of-duty-warzone.jpg"
@@ -46,17 +32,10 @@
         />
       </div>
 
-      <div class="game" style="background-color: rgba(0, 255, 0, 0.2)" data-id="game">
+      <div class="game" data-id="game">
         <!-- <span>Modern Warfare</span> -->
         <img
-          class="game__full-image game__full-image--right"
-          width="3840px"
-          height="2160px"
-          src="./assets/call-of-duty-modern-warfare.jpg"
-          alt=""
-        />
-        <img
-          class="game__small-image game__small-image--right"
+          class="game__image game__image--right"
           width="3840px"
           height="2160px"
           src="./assets/call-of-duty-modern-warfare.jpg"
